fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -8140,7 +8140,7 @@ body {
   font-weight: 400;
   color: #999999; }
   body.menu-show {
-    overflow: hidden;
+    /* overflow: hidden; */
     position: fixed;
     height: 100%;
     width: 100%; }
@@ -9050,7 +9050,8 @@ textarea.form-control {
 
 .ftco-animate {
   opacity: 0;
-  visibility: hidden; }
+  /* visibility: hidden;  */
+}
 
 .bg-primary {
   background: #ffbd39 !important; }
@@ -9606,7 +9607,7 @@ textarea.form-control {
   box-shadow: 0px 24px 64px rgba(0, 0, 0, 0.24);
   border-radius: 16px;
   opacity: 0;
-  visibility: hidden;
+  /* visibility: hidden; */
   -webkit-transition: opacity .2s ease-out, visibility 0s linear .2s;
   -o-transition: opacity .2s ease-out, visibility 0s linear .2s;
   transition: opacity .2s ease-out, visibility 0s linear .2s;
